examples/test/testpolicy6249.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6249
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key11: value46
      key39: value17
      key49: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value13
      podSelector:
        matchLabels:
          key17: value37
